fixed scrollbars appearance on the app

--- a/styles/Canvas.scss
+++ b/styles/Canvas.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
 
-  border-radius: 15px;
+  border-radius: 10px;
 
   background: linear-gradient(180deg, rgba(201, 201, 201, 0.2) 50%, rgba(242, 242, 242, 0) 100%);
 
